--- a/src/static/demo/css/main2.css
+++ b/src/static/demo/css/main2.css
@@ -1,12 +1,41 @@
-.main-footer {
+/* Reset */
+html, body {
+    height: 100%;
+    margin: 0;
     padding: 0;
-    color: #AAB2BD;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 
-/* Here it starts to matter */
+/* Essentials */
+.container {
+    display: table;
+}
+
+.content {
+    display: table-row;
+    height: 100%;
+}
+
+.content-body {
+    display: table-cell;
+}
+
+/* Aestetics */
+.container {
+    width: 100%;
+    height: 100%;
+}
+
+.header, .footer {
+    padding: 10px 20px;
+    background: #434A54;
+}
+
+.content-body {
+    padding: 20px;
+    background: #F1F2F6;
+}
+
+/* Mine */
 
 .header {
     background: transparent url("../img/wild_flowers.png") repeat scroll 0 0;
@@ -19,4 +48,9 @@ body {
 
 footer {
     color: #AAB2BD;
+}
+
+video {
+    max-height: 100%;
+    max-width: 100%;
 }
