--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -5,7 +5,15 @@ html, body {
     padding: 0;
 }
 .container_body {
-    height: auto;
+    height: 90%;
     width: 100%;
     color: #fff;
+}
+
+.footer{
+
+}
+
+#content_div {
+
 }
